--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 @import url("styles/header.css");
 :root{
-    
-
+    --corde-de-fundo:
+    --branco:
+}
+body{
+background-color: var(--corde-de-fundo);
 }
