--- a/header.css
+++ b/header.css
@@ -19,3 +19,28 @@
 .container_imagem{
     padding: 1em;
 }
+.cabecalho-menu-hamburguer{
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+}
+.cabecalho{
+    background-color: var(--branco);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.container{
+    display: flex;
+    align-items: center;
+}
+.container_imagem{
+    display: flex;
+    justify-content: flex-start;    
+    padding: 1em;
+}
+.poppins-regular {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
